abstractnavigationwidget: Add missing DUChain lock

Otherwise this might cause a crash when clicking on items in the
navigation tooltips.

BUG: 386901
FIXED-IN: 5.2.1